# cleverdog

./: .rustfmt.toml  Cargo.toml  LICENSE  camera.sdp
examples/: cleverdog.rs
src/: lib.rs  mac.rs  main.rs  protocol.rs  rtp.rs
src/protocol/: scan.rs  version.rs
