[package]
name = "cleverdog"
version = "0.1.0"
authors = ["Evgeny Safronov <division494@gmail.com>"]
edition = "2018"
description = "Cleverdog Camera API and basic streaming proxy"
license = "MIT"

[dependencies]
byteorder = "1"
clap = "2"
log = "0.4"
env_logger = "0.6"
rustls = "0.15"
webpki = "0.19"
webpki-roots = "0.16"
rmpv = "0.4"


[profile.release]
panic = "abort"
